# openddil-logistics-sim

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build.yml
config/: default.yaml
src/logistics_sim/: __init__.py  aliases.py  asset_discovery.py  config.py  element_gen.py  main.py  publisher.py
src/tests/: test_aliases.py  test_asset_discovery.py  test_config.py  test_element_gen.py
